fix section spacing - case studies

--- a/public/assets/css/reviews.css
+++ b/public/assets/css/reviews.css
@@ -115,7 +115,7 @@
     /* Mobile - 360px */
     @media only screen and (min-width: 0rem) {
         #gallery-1446 {
-            padding: var(--sectionPadding);
+            /* padding: var(--sectionPadding); */
         }
         #gallery-1446 .cs-container {
             width: 100%;
@@ -178,7 +178,7 @@
     @media only screen and (min-width: 0rem) {
         #content-1638 {
             padding-top: 8rem !important;
-            padding: var(--sectionPadding);
+            /* padding: var(--sectionPadding); */
             /* background-color: #f7f7f7; */
             position: relative;
             z-index: 1;
